Data in Card visible now ; select Navs added funcs (don't work yet)   issue: navs can't be selected...

--- a/src/Tutorials/TutorialsContent.css
+++ b/src/Tutorials/TutorialsContent.css
@@ -40,6 +40,7 @@ body
 {
 	box-sizing: border-box;
 	padding: 50px 150px;
+	padding-top: 150px;
 	display: grid;
 	grid-template-columns: 1fr 1fr 1fr 1fr;
 	grid-gap: 30px;
