--- a/src/Tutorials/TutorialsNavbar.css
+++ b/src/Tutorials/TutorialsNavbar.css
@@ -1,12 +1,14 @@
 .tut_navbar
 {
-	border: 1px solid blue;
+	position: fixed;
+	z-index: 100;
+	background: purple;
 	display: flex;
 	justify-content: center;
 	align-items: flex-end;
 	width: 100%;
 	height: 110px;
-
+	box-shadow: ;
 }
 
 .tut_navbar_nav
